--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>foo.bar</groupId>
+    <groupId>org.misha</groupId>
     <artifactId>jaxb-sheet</artifactId>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
     <name>jaxb-sheet</name>
-    <url>http://maven.apache.org</url>
+    <url>http://misha.org</url>
     <properties>
         <spring.version>3.2.0.RELEASE</spring.version>
     </properties>
